--- a/Eastnetic/Client/Shared/NavMenu.razor
+++ b/Eastnetic/Client/Shared/NavMenu.razor
@@ -9,21 +9,22 @@
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
+  
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+            <NavLink class="nav-link" href="orders">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Order List
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="windows">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Window List
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="elements">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Element List
             </NavLink>
-        </div>
+        </div> 
     </nav>
 </div>
 
