--- a/Eastnetic/Client/_Imports.razor
+++ b/Eastnetic/Client/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using Eastnetic.Client
 @using Eastnetic.Client.Shared
+@using Eastnetic.BLL.DTO;
+@using Eastnetic.Shared
+@using Eastnetic.BLL
