--- a/Eastnetic/Client/_Imports.razor
+++ b/Eastnetic/Client/_Imports.razor
@@ -9,5 +9,5 @@
 @using Eastnetic.Client
 @using Eastnetic.Client.Shared
 @using Eastnetic.BLL.DTO;
-@using Eastnetic.Shared
+@*@using Eastnetic.Shared*@
 @using Eastnetic.BLL
