--- a/Eastnetic/Client/Pages/AddOrder.razor
+++ b/Eastnetic/Client/Pages/AddOrder.razor
@@ -6,27 +6,32 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form>
+        @*<form>*@
+        <EditForm Model="@order" OnValidSubmit="@Save">
+            <DataAnnotationsValidator />
+            <ValidationSummary />
             <div class="form-group">
                 <label for="Name" class="control-label">Name</label>
                 <input for="Name" class="form-control" @bind-value="order.Name" />
             </div>
-       
+
             <div class="form-group">
-                <label asp-for="Department" class="control-label">State</label>
-                <input asp-for="Department" class="form-control" @bind-value="order.State" />
+                <label asp-for="State" class="control-label">State</label>
+                <input asp-for="State" class="form-control" @bind-value="order.State" />
             </div>
-           
-            <div class="form-group">
-                <button type="button" class="btn btn-default" onclick="@(async () => await Save())">Save</button>
-                <button class="btn" onclick="@(cancel)">Cancel</button>
+
+            <div class="form-group mt-2">
+                <button type="submit" class="btn btn-primary">Save</button>
+                <button class="btn btn-secondary" onclick="@(cancel)">Cancel</button>
             </div>
-        </form>
+        </EditForm>
+        @*</form>*@
     </div>
 </div>
 
 @code {
     OrderDto order = new OrderDto();
+
     protected async Task Save()
     {
         var response = await Http.PostAsJsonAsync("Order/SaveOrder", order);
