--- a/Eastnetic/Client/Pages/AddWindow.razor
+++ b/Eastnetic/Client/Pages/AddWindow.razor
@@ -6,9 +6,11 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form>
+        <EditForm Model="@model" OnValidSubmit="@Save">
+            <DataAnnotationsValidator />
+            <ValidationSummary />
             <div class="form-group">
-                <label for="Name" class="control-label">Òrder</label>
+                <label for="Name" class="control-label">Order</label>
                 <select class="form-control selectpicker" @bind="model.OrderId">
                     @*<option>--select--</option>*@
                     @foreach (var item in orders)
@@ -27,17 +29,17 @@
                 <label asp-for="Department" class="control-label">QuantityOfWindows</label>
                 <input asp-for="Department" class="form-control" @bind-value="model.QuantityOfWindows" />
             </div>
-            <div class="form-group">
+           @* <div class="form-group">x
                 <label asp-for="Department" class="control-label">TotalSubElements</label>
                 <input asp-for="Department" class="form-control" @bind-value="model.TotalSubElements" />
             </div>
+*@
 
-
-            <div class="form-group">
-                <button type="button" class="btn btn-primary" onclick="@(async () => await Save())">Save</button>
-                <button class="btn" onclick="@(cancel)">Cancel</button>
+            <div class="form-group mt-2">
+                <button type="submit" class="btn btn-primary">Save</button>
+                <button class="btn btn-secondary" onclick="@(cancel)">Cancel</button>
             </div>
-        </form>
+        </EditForm>
     </div>
 </div>
 
