--- a/Eastnetic/Client/Pages/Windows.razor
+++ b/Eastnetic/Client/Pages/Windows.razor
@@ -1,6 +1,5 @@
 ﻿@page "/windows"
 @using Eastnetic.BLL.DTO;
-@using Eastnetic.Shared
 @using Eastnetic.BLL
 @inject HttpClient Http
 @inject IJSRuntime JsRuntime
@@ -8,7 +7,7 @@
 <PageTitle>Window List</PageTitle>
 
 <p>
-    <a href="/addwindow">Create New</a>
+    <a href="/addwindow" class="btn btn-primary">Create New</a>
 </p>
 @if (windows == null)
 {
@@ -16,12 +15,14 @@
 }
 else
 {
-    <table class="table">
+    <table class="table table-striped table-bordered table-sm">
         <thead>
             <tr>
                 <th>Id</th>
                 <th>Name</th>
+                <th>Order</th>
                 <th>QuantityOfWindows</th>
+                <th>TotalSubElements</th>
                 <th></th>
             </tr>
         </thead>
@@ -31,7 +32,9 @@ else
                 <tr>
                     <td>@window.Id</td>
                     <td>@window.Name</td>
+                    <td>@window.OrderName</td>
                     <td>@window.QuantityOfWindows</td>
+                    <td>@window.TotalSubElements</td>
                     <td><button class="btn btn-danger" @onclick="@(() => DeleteOrder(@window.Id))">Delete</button></td>
                 </tr>
             }
