--- a/Eastnetic/Client/Pages/RdlcReport.razor
+++ b/Eastnetic/Client/Pages/RdlcReport.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿@page "/rdlc"
 @inject IJSRuntime JSRuntime
 
 
@@ -229,7 +229,7 @@ button:hover {
 }
   </style>
   <div class="watermark">
-    <span id="watermark" >WATERMARK</span>
+    <span id="watermark" style="display:none;">WATERMARK</span>
   </div>
   <div class="invoice-box" id="printableArea">
 
