--- a/Eastnetic/Client/Shared/NavMenu.razor
+++ b/Eastnetic/Client/Shared/NavMenu.razor
@@ -9,7 +9,7 @@
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
-  
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="orders">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Order List
@@ -24,7 +24,11 @@
             <NavLink class="nav-link" href="elements">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Element List
             </NavLink>
-        </div> 
+        </div>  <div class="nav-item px-3">
+            <NavLink class="nav-link" href="rdlc">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> RDLC
+            </NavLink>
+        </div>
     </nav>
 </div>
 
